--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@./backend",
-  "version": "0.0.1",
+  "name": "backend",
+  "version": "1.0.0",
   "private": true,
   "nx": {
     "name": "backend",
@@ -41,5 +41,34 @@
         }
       }
     }
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@vendure/admin-ui-plugin": "^2.1.9",
+    "@vendure/asset-server-plugin": "^2.1.9",
+    "@vendure/core": "^2.1.9",
+    "@vendure/email-plugin": "^2.1.9",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "start": "ts-node-dev --respawn src/main.ts",
+    "build": "tsc -p tsconfig.app.json",
+    "typecheck": "tsc --noEmit"
   }
 }
