--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,8 +6,19 @@
     "name": "frontend"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.6",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@vendure/admin-ui-plugin": "^3.2.2",
+    "@vendure/core": "^3.2.2",
+    "graphql": "^16.10.0",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3"
   }
 }
