--- a/package.json
+++ b/package.json
@@ -1,61 +1,34 @@
 {
-  "name": "@./source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {},
+  "name": "sacred-stones",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
-    "axios": "^1.6.0",
-    "next": "~15.2.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^2.1.1",
-    "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.7.1",
-    "@nx/eslint-plugin": "20.7.1",
-    "@nx/js": "20.7.1",
-    "@nx/nest": "^20.7.1",
-    "@nx/next": "20.7.1",
-    "@nx/node": "20.7.1",
-    "@nx/react": "20.7.1",
-    "@nx/web": "20.7.1",
-    "@nx/webpack": "20.7.1",
-    "@nx/workspace": "20.7.1",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "^15.2.4",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
-    "nx": "20.7.1",
-    "prettier": "^2.6.2",
-    "sass": "1.62.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
-    "webpack-cli": "^5.1.4"
-  },
   "workspaces": [
     "apps/*",
     "libs/*"
-  ]
+  ],
+  "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@vendure/admin-ui-plugin": "^2.1.9",
+    "@vendure/asset-server-plugin": "^2.1.9",
+    "@vendure/core": "^2.1.9",
+    "@vendure/email-plugin": "^2.1.9",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "start:backend": "cd apps/backend && yarn start",
+    "start:frontend": "cd apps/frontend && yarn dev",
+    "install:all": "yarn install && cd apps/backend && yarn install && cd ../frontend && yarn install"
+  }
 }
